--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ build-backend = "poetry.core.masonry.api"
 black = "^25.11.0"
 isort = "^7.0.0"
 alembic = "^1.17.2"
+pytest = "^9.0.1"
 
 [tool.black]
 line-length = 120
