--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ black = "^25.11.0"
 isort = "^7.0.0"
 alembic = "^1.17.2"
 pytest = "^9.0.1"
+pytest-asyncio = "^1.3.0"
 
 [tool.black]
 line-length = 120
