--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ isort = "^7.0.0"
 alembic = "^1.17.2"
 pytest = "^9.0.1"
 pytest-asyncio = "^1.3.0"
+pytest-mock = "^3.15.1"
 
 [tool.black]
 line-length = 120
