--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
     "asyncpg (>=0.31.0,<0.32.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
-    "sqlalchemy-utils (>=0.42.0,<0.43.0)"
+    "sqlalchemy-utils (>=0.42.0,<0.43.0)",
+    "coverage (>=7.12.0,<8.0.0)"
 ]
 
 [build-system]
@@ -27,6 +28,8 @@ alembic = "^1.17.2"
 pytest = "^9.0.1"
 pytest-asyncio = "^1.3.0"
 pytest-mock = "^3.15.1"
+pytest-cov = "^7.0.0"
+coverage = "^7.12.0"
 
 [tool.black]
 line-length = 120
