--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pytest-asyncio = "^1.3.0"
 pytest-mock = "^3.15.1"
 pytest-cov = "^7.0.0"
 coverage = "^7.12.0"
+flake8-pyproject = "^1.2.4"
 
 [tool.black]
 line-length = 120
@@ -38,5 +39,9 @@ line-length = 120
 profile = "black"
 line_length = 120
 
+[tool.flake8]
+max-line-length = 120
+
 [tool.poetry]
 package-mode = false
+
