--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,4 @@ jobs:
       continue-on-error: true
 
     - name: Run tests with coverage
-      run: poetry run pytest --cov=app --cov-report=xml --cov-report=term-missing
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: false
+      run: poetry run pytest
